# libminimsgbus

./: .gitignore  CMakeLists.txt  LICENSE  README.md
MSVG/: libminimsgbus.sln
MSVG/ConsoleApplication1/: ConsoleApplication1.cpp  ConsoleApplication1.vcxproj
MSVG/ConsoleApplication1/x64/Debug/: CodeAnalysisResultManifest.txt  ConsoleApplication1.exe.recipe
MSVG/LibMiniMsgBus/: BridgeCore.cpp  BusFactory.h  ErrorQueue.h  IMiniMsgBus.h  InprocMsgBus.cpp  IpcMsgBus.cpp  LibMiniMsgBus.vcxproj  LibMiniMsgBus.vcxproj.filters  MsgDef.h  MsgLocalNode.cpp  MsgLocalNode.h  NetMsgBus.cpp  ObjSubMgr.cpp  ObjSubMgr.h  PtPNet.cpp  SubTable.cpp  TopicBroadcast.cpp  TopicBroadcast.h  Util.h  msgtopic.h
MSVG/LibMiniMsgBus/Debug/: LibMiniMsgBus.dll.recipe  LibMiniMsgBus.ilk  vc142.idb
MSVG/LibMiniMsgBus/Debug/LibMiniMsgBus.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  LibMiniMsgBus.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
MSVG/LibMiniMsgBus/x64/Debug/: BridgeCore.sbr  IMiniMsgBus.sbr  IPtPNet.sbr  InprocMsgBus.sbr  IpcMsgBus.sbr  LibMiniMsgBus.dll.recipe  LocalTopic.nativecodeanalysis.sarif  MsgLocalNode.nativecodeanalysis.sarif  MsgLocalNode.sbr  NonCopyable.sbr  ObjSubMgr.sbr  PtPNet.sbr  PtpFactory.sbr  PubMgr.nativecodeanalysis.sarif  PubTable.nativecodeanalysis.sarif  PubTable.sbr  SubMgr.nativecodeanalysis.sarif  SubTable.nativecodeanalysis.sarif  SubTable.sbr  TopicBroadcast.nativecodeanalysis.sarif  Util.nativecodeanalysis.sarif  Util.sbr  dllmain.nativecodeanalysis.sarif  dllmain.sbr  pch.nativecodeanalysis.sarif  pch.sbr  vc142.idb
MSVG/LibMiniMsgBus/x64/Debug/LibMiniMsgBus.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  bscmake.command.1.tlog  bscmake.read.1.tlog  libminimsgbus.lastbuildstate  libminimsgbus.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
MSVG/MsgTransport/: IpcNative.cpp  IpcNative.h  MsgTransport.vcxproj  MsgTransport.vcxproj.filters  NngDataNative.cpp  NngDataNative.h  cpp.hint  defMsg.h  test.h
MSVG/MsgTransport/x64/Debug/: IpcNative.sbr  MsgTransport.dll.recipe  NngDataNative.sbr  ZmqPgm.sbr  dllmain.sbr  msgtransport.ilk  pch.sbr  vc142.idb
MSVG/MsgTransport/x64/Debug/MsgTransport.tlog/: CL.command.1.tlog  CL.read.1.tlog  (+7 more)
MSVG/Uitl/: Tools.h  Uitl.vcxproj  Uitl.vcxproj.filters  bussemaphore.cpp
MSVG/Uitl/Debug/: Util.dll.recipe  Util.ilk  vc142.idb
MSVG/Uitl/Debug/Util.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Util.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
MSVG/Uitl/x64/Debug/: Uitl.dll.recipe  Util.dll.recipe  Util.ilk  bussemaphore.sbr  dllmain.sbr  pch.sbr  vc142.idb
MSVG/x64/Debug/: libminimsgbus.exp  msgtransport.exp
demo/: CMakeLists.txt  demo.cpp  demo.h
deploy/include/: zmq_addon.hpp
deploy/include/libipc/: ipc.h
deploy/lib/: libnng.so.1.5.2  libzmq-v142-mt-gd-4_3_4.exp  nng.exp
libminimsgbus/: BridgeCore.cpp  BridgeCore.h  BusFactory.cpp  BusFactory.h  CmakeLists.txt  IMiniMsgBus.cpp  IMiniMsgBus.h  IPtPNet.cpp  IPtPNet.h  InprocMsgBus.cpp  InprocMsgBus.h  IpcMsgBus.cpp  IpcMsgBus.h  LocalTopic.cpp  LocalTopic.h  MiniMsgExport.h  MqMsgBus.cpp  MqMsgBus.h  MqMsgNng.cpp  MqMsgNng.h  MsgDef.h  MsgLocalNode.cpp  MsgLocalNode.h  MsgStruct.h  NetMsgBus.cpp  NetMsgBus.h  NonCopyable.cpp  ObjSubMgr.cpp  ObjSubMgr.h  PtPNet.cpp  PtPNet.h  PtpFactory.cpp  PtpFactory.h  PubMgr.cpp  PubMgr.h  PubTable.cpp  SubMgr.cpp  SubMgr.h  SubTable.cpp  SubTable.h  (+11 more)
libminimsgbus/include/: BusFactory.h  IPtPNet.h  InprocMsgBus.h  LocalTopic.h  MsgDef.h  NetMsgBus.h  NonCopyable.h  PtpFactory.h  PubMgr.h  PubTable.h  SubMgr.h  SubTable.h
libminimsgbus/src/: InprocMsgBus.cpp  LocalTopic.cpp  NonCopyable.cpp  PubMgr.cpp  PubTable.cpp  msgtopic.cpp  subscriber.cpp
msgtransport/: CMakeLists.txt  IpcNative.cpp  NngDataNative.cpp  NngDataNative.h  ZmqPgm.cpp  ZmqPgm.h  defMsg.h
msgtransport/include/: NngDataNative.h  ZmqPgm.h
msgtransport/src/: NngDataNative.cpp  ZmqPgm.cpp
util/: CMakeLists.txt  Tools.h  bussemaphore.cpp  bussemaphore.h
(+8 files in other folders)
